--- a/index.html
+++ b/index.html
@@ -2,46 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Copy Text Example</title>
+  <title>Copy Button Example</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       padding: 40px;
-      background: #f9f9f9;
-    }
-    textarea {
-      width: 100%;
-      height: 150px;
-      font-size: 16px;
-      margin-bottom: 20px;
     }
     button {
       padding: 10px 20px;
       font-size: 16px;
-      background: #007BFF;
+      background-color: #4CAF50;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 4px;
       cursor: pointer;
     }
     button:hover {
-      background: #0056b3;
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
-  <h1>Quick Copy Text</h1>
-  <textarea id="textToCopy">Here is the text you want to make easy to copy.</textarea><br>
-  <button onclick="copyText()">Copy to Clipboard</button>
+
+  <h1>Click to Copy</h1>
+  <button onclick="copyText()">Copy Text</button>
 
   <script>
     function copyText() {
-      const textarea = document.getElementById("textToCopy");
-      textarea.select();
-      textarea.setSelectionRange(0, 99999); // for mobile devices
-      document.execCommand("copy");
-      alert("Text copied to clipboard!");
+      const text = TestCopied ?? `;
+      navigator.clipboard.writeText(text).then(() => {
+        alert("Text copied to clipboard!");
+      }).catch(err => {
+        console.error("Copy failed", err);
+        alert("Failed to copy text");
+      });
     }
   </script>
+
 </body>
 </html>
