--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
   <h1>Click to Copy</h1>
   <button onclick="copyText()">Copy Text</button>
 
-  <script>
-    function copyText() {
-      const text = TestCopied ?? `;
-      navigator.clipboard.writeText(text).then(() => {
-        alert("Text copied to clipboard!");
-      }).catch(err => {
-        console.error("Copy failed", err);
-        alert("Failed to copy text");
-      });
-    }
-  </script>
+<script>
+  function copyText() {
+    const text = `YOUR TEXT HERE`;
+    navigator.clipboard.writeText(text).then(() => {
+      alert("Text copied to clipboard!");
+    }).catch(err => {
+      console.error("Copy failed", err);
+      alert("Failed to copy text");
+    });
+  }
+</script>
+
 
 </body>
 </html>
