--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <script>
   function copyText() {
-    const text = `YOUR TEXT HERE`;
+    const text = `Test 123 `;
     navigator.clipboard.writeText(text).then(() => {
       alert("Text copied to clipboard!");
     }).catch(err => {
