--- a/index.html
+++ b/index.html
@@ -27,18 +27,27 @@
   <h1>Click to Copy</h1>
   <button onclick="copyText()">Copy Text</button>
 
-<script>
-  function copyText() {
-    const text = `Test 123 `;
-    navigator.clipboard.writeText(text).then(() => {
-      alert("Text copied to clipboard!");
-    }).catch(err => {
-      console.error("Copy failed", err);
-      alert("Failed to copy text");
-    });
-  }
-</script>
+  <script>
+    function copyText() {
+      const text = `This is the text you wanted to copy.`;
 
+      if (!navigator.clipboard) {
+        console.warn("Clipboard API not supported");
+        alert("Your browser does not support clipboard copy.");
+        return;
+      }
+
+      navigator.clipboard.writeText(text)
+        .then(() => {
+          console.log("Text copied to clipboard!");
+          alert("Text copied to clipboard!");
+        })
+        .catch(err => {
+          console.error("Copy failed: ", err);
+          alert("Copy failed. Check browser settings.");
+        });
+    }
+  </script>
 
 </body>
 </html>
