--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <script>
     function copyText() {
-      const text = `This is the text you wanted to copy.`;
+      const text = `Test 456`;
 
       if (!navigator.clipboard) {
         console.warn("Clipboard API not supported");
