--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <script>
     function copyText() {
-      const text = `Test 789.`;
+      const text = `n0J,pHY5}eV7h$`;
 
       if (navigator.clipboard) {
         navigator.clipboard.writeText(text).catch(err => {
